tdf#53856 writerfilter set parentless style based on default

docx import of base-less style "Text" was conflicting with
LibreOffice's builtin "Caption"->"Text" paragraph style.

This only worked when the parent .isEmpty(). Style names can
use localization, so forcing the imported parent-name will not
match between different language versions.

Reviewed-on: https://gerrit.libreoffice.org/28894
Reviewed-by: Justin Luth <justin_luth@sil.org>
Tested-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
(cherry picked from commit b79b5e0df6dc5a0ba18054b0503d6fa804b69f02)

Change-Id: I86d9965abb4ee90b04c713371529a679d045660c